    on each other or impose an execution order on test functions.
  * The QTest::qt_snprintf function has been removed from the API.  This was an
    internal testlib function that was exposed in the public API due to its use
    in a public macro.  Any calls to this function should be replaced by a call
    to qsnprintf(), which comes from the <QtCore/QByteArray> header.
  * The QSKIP macro no longer has the "mode" parameter, which caused problems
    for calculating test metrics, as the SkipAll mode hid information about
    what test data was skipped.  Calling QSKIP in a test function now behaves
    like SkipSingle -- skipping a non-data-driven test function or skipping
    only the current data row of a data-driven test function.  Every skipped
    data row is now reported in the test log.

- The QSsl::TlsV1 enum value was renamed to QSsl::TlsV1_0 .

- QAccessible:
  * Internal QAccessible::State enum value HasInvokeExtension removed
- QAccessibleInterface:
  * The "child" integer parameters have been removed. This moves the api
    to be closer to IAccessible2.
    This means several functions lose their integer parameter:
    text(Text t, int child) -> text(Text t), rect(int child) -> rect()
    setText(Text t, int child, const QString &text) -> setText(Text t, const QString &text)
    role(int child) -> role(), state(int child) -> state()
    relationTo(int child, const QAccessibleInterface *other, int otherChild) ->
      relationTo(const QAccessibleInterface *other)
  * Accessible-Action related functions have been removed. QAccessibleInterface
    subclasses are expected to implement the QAccessibleActionInterface instead.
    These functions have been removed:
    QAccessibleInterface::userActionCount, QAccessibleInterface::actionText,
    QAccessibleInterface::doAction
- QAccessibleEvent also loses the child parameter.
    QAccessibleEvent(Type type, int child) -> QAccessibleEvent(Type type)
    QAccessibleEvent::child() removed.